# agent-voice-web

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
backend/public_access/: __init__.py  acme.py  cli.py  ddns.py  dnspod.py
backend/speaker_service/: __init__.py  server.py
backend/tests/: test_acme.py  test_app.py  test_asr.py  test_auth.py  test_bootstrap.py  test_claude.py  test_config.py  test_coordinator.py  test_ddns.py  test_deploy_files.py  test_dnspod.py  test_latency.py  test_latency_summary.py  test_protocol.py  test_public_deploy_files.py  test_qwen_tts_server.py  test_session_store.py  test_speaker.py  test_speaker_benchmark.py  test_speaker_routes.py  test_speaker_service.py  test_speech_filter.py  test_tts.py  (+4 more)
deploy/: agent-voice-watchdog.service  agent-voice-watchdog.timer  agent-voice.target  claude-voice-bootstrap.service  claude-voice-ddns.service  claude-voice-ddns.timer  claude-voice.service  qwen3-tts.service  searxng.service  speaker-verifier.service
docs/: iphone-lan-setup.md  local-web-search.md  public-access-runbook.md  systemd-supervision.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: agent-voice-watchdog.py  agent_voice_watchdog.py  benchmark-qwen3-tts.py  benchmark-speaker-verifier.py  certbot-dnspod-auth.sh  certbot-dnspod-cleanup.sh  certbot-nginx-deploy.sh  configure-dnspod-credentials.sh  generate-lan-certs.sh  install-public-access.sh  install-qwen3-tts-vllm.sh  install-user-services.sh  local-web.py  manage-searxng.sh  summarize-voice-latency.py  verify-websocket-turn.py
(+61 files in other folders)
